# divvy-libpp

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/test/: divvy-libpp_demo.cpp
